[tool.poetry]
name = "multi-agent-playground"
version = "0.1.0"
description = ""
authors = ["Bussler <maarten.bussler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = {version = "^2.3.1+cu118", source = "pytorch-gpu-src"}
torchvision = {version = "^0.18.1+cu118", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.3.1+cu118", source = "pytorch-gpu-src"}

[tool.poetry.scripts]

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.10.0"

[tool.black]
line-length = 110

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
exclude = "(.venv)"
